[package]
name = "netmock"
version = "0.1.0"
description = "Network mocks library"
authors = ["Safronov Michail <msaf1980@gmail.com>"]
license = "MIT"
keywords = ["testing", "network", "async"]
repository = "https://github.com/msaf1980/netmock"
readme = "README.md"
edition = "2018"

[features]
default = []
tokio = ["dep:tokio", "dep:futures-core"]

[dependencies]
tokio = { version = "1.37.0", features = ["io-util", "test-util"], optional = true }
futures-core = { version = "0.3.30", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1.37.0", features = ["io-util", "test-util", "macros"] }
